<resources>
    <string name="app_name">Raffler</string>

    <!-- Buttons -->
    <string name="button_next">Next</string>
    <string name="button_resend">Resend</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>

    <string name="tab_title_chats">CHATS</string>
    <string name="tab_title_raffles">RAFFLES</string>
    <string name="tab_title_contacts">CONTACTS</string>

    <!-- Register Phone -->
    <string name="register_verify_phone">Verify your phone number</string>
    <string name="register_verify_content">Raffler will send SMS message to verify your phone\nnumber.Enter your country code and phone number.</string>
    <string name="register_verify_note">Carrier SMS charges may apply</string>
    <string name="register_verify_sent">Verification code sent</string>

    <!-- Register User -->
    <string name="register_user_title">Edit your profile</string>
    <string name="register_user_content">Enter your name for push notification and add an optional profile picture.</string>
    <string name="register_user_name">Your name</string>
    <string name="register_user_alert_empty">Your name should not be empty!</string>

    <!-- Chat -->
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="chat_user_typing">typing</string>
    <string name="chat_user_online">online</string>
    <string name="chat_user_offline">offline</string>
    <string name="chat_user_lastseen">Last seen</string>
    <string name="chat_list_empty">No Chats\nAdd your friends to Contacts</string>
    <string name="chat_attach_select_photo">Select a photo</string>
    <string name="chat_send_photo">Sent you a photo.</string>

    <!-- Raffles -->
    <string name="raffles_title">Raffles</string>
    <string name="raffles_alert_expired">This raffle is already expired.</string>
    <string name="raffles_alert_already">You\'ve got already this one.</string>
    <string name="raffles_alert_no_enough">Sorry! You don\'t have enough points. Chat with friends to get points and win!</string>
    <string name="raffles_alert_minimum">Sorry! You should enter at least a point. Please try again!</string>
    <string name="raffles_alert_entering">Please enter raffle points</string>
    <string name="raffles_alert_good_luck">Good luck!</string>
    <string name="raffles_empty_data">No Raffles</string>

    <!-- Contacts-->
    <string name="contact_no_data">No Contacts</string>
    <string name="contact_invite">Invite friends</string>
    <string name="contact_help">Contacts help</string>
    <string name="contact_alert_earning_extra">Hurray! You just earned 5 extra raffle points. Please invite more friends to get more points.</string>

    <!-- Prize Wallet -->
    <string name="wallet_title">Prize Wallet</string>
    <string name="wallet_inbox">Inbox</string>
    <string name="wallet_empty">No Prizes</string>
    <string name="wallet_winner">Winner</string>
    <string name="wallet_loser">Loser</string>

    <!-- News -->
    <string name="news_title">News</string>
    <string name="news_empty">No News</string>

    <!-- Country Picker -->
    <string name="country_picker_search">Search</string>

    <!-- Menu -->
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>

    <string name="copyright_version">Raffler version&#160;</string>
    <string name="copyright_company">\n2017. All Rights Reserved Raffler LLC</string>

    <!-- Alert View -->
    <string name="alert_title_notice">Notice</string>
    <string name="alert_button_okay">Ok</string>
    <string name="alert_button_cancel">Cancel</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

</resources>